GNOME Bugzilla – Bug 705606
ERROR:platform/nm-linux-platform.c:687:init_ip6_route: assertion failed: (rtnl_route_get_nnexthops (rtnlroute) == 1)
Last modified: 2013-08-13 21:34:34 UTC
How to reproduce: Set up machine with multiple eth devices put into one bridge (brx) and radvd with very simple config like this: interface brx { AdvSendAdvert on; prefix 2001:db8:1:2::/64 { }; }; Connect the eth devices 1:1 to another machine with NM. Run NM and you will get this error during NM startup.
This was resolved by: commit b637c6a10136f65d86778e36f631636b09e7cc17 Author: Dan Williams <dcbw@redhat.com> Date: Wed Aug 7 14:47:22 2013 -0500 platform: don't assert on multi-hop routes (rh #989022) It only matters that there's at least one next hop, not that there is only one.
I'm afraid the fix is incorrect as the assertion was there to avoid doing *anything* with routes unsupported by nm-platform (multihop routes in this case). The proper fix would either avoid calling init_ip6_route() with multi-hop routes or add support for multi-hop routes to nm-platform (which would be very tricky).
Created attachment 251383 [details] [review] Ignore multi-hop routes to avoid any problems.