platform: ignore multi-hop routes

https://bugzilla.gnome.org/show_bug.cgi?id=705606